@@ -26,7 +26,7 @@ OPTIONAL
   EV 4.0+                 ($ev)
   IO::Socket::Socks 0.64+ ($socks)
   IO::Socket::SSL 1.84+   ($tls)
-  Net::DNS::Native 0.14+  ($ndn)
+  Net::DNS::Native 0.15+  ($ndn)
 
 EOF
 
