@@ -1,5 +1,6 @@
 
 5.71  2014-12-28
+  - Updated Net::DNS::Native requirement to 0.15 for some important bug fixes.
   - Updated jQuery to version 2.1.3.
 
 5.70  2014-12-18
